{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 24,
  "lineage": "f129a974-cc5c-f05a-e419-386fcf7f4a1f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:network-acl/acl-03355acb7f11908b5",
            "default_network_acl_id": "acl-03355acb7f11908b5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03355acb7f11908b5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "147997133333",
            "subnet_ids": [
              "subnet-0390bcda39be8220a",
              "subnet-097d0f933f095fcf8"
            ],
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:route-table/rtb-066ee901153a83c1a",
            "default_route_table_id": "rtb-066ee901153a83c1a",
            "id": "rtb-066ee901153a83c1a",
            "owner_id": "147997133333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:security-group/sg-0e60f08286d43704b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e60f08286d43704b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "147997133333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-default"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039f4e2db8925e4fd",
            "arn": "arn:aws:ec2:us-west-1:147997133333:elastic-ip/eipalloc-039f4e2db8925e4fd",
            "domain": "vpc",
            "id": "eipalloc-039f4e2db8925e4fd",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-158-61.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.158.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-us-west-1c"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-us-west-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:internet-gateway/igw-0a34f1e9dc04f1cf7",
            "id": "igw-0a34f1e9dc04f1cf7",
            "owner_id": "147997133333",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039f4e2db8925e4fd",
            "association_id": "eipassoc-0338d91240eaa854e",
            "connectivity_type": "public",
            "id": "nat-06ce167ca07d99463",
            "network_interface_id": "eni-0e5f6e293f1fdafcc",
            "private_ip": "10.0.87.165",
            "public_ip": "54.193.158.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a616f40f2aff1939",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-us-west-1c"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-us-west-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00c31bdc9d3f84cf11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ce167ca07d99463",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c31bdc9d3f84cf1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a34f1e9dc04f1cf7",
            "id": "r-rtb-0ea6849343ec898d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea6849343ec898d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:route-table/rtb-00c31bdc9d3f84cf1",
            "id": "rtb-00c31bdc9d3f84cf1",
            "owner_id": "147997133333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-private"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:route-table/rtb-0ea6849343ec898d9",
            "id": "rtb-0ea6849343ec898d9",
            "owner_id": "147997133333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a34f1e9dc04f1cf7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-public"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050cc904324343ff6",
            "route_table_id": "rtb-00c31bdc9d3f84cf1",
            "subnet_id": "subnet-07fe180efa71c3307"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c118179ada4de00",
            "route_table_id": "rtb-00c31bdc9d3f84cf1",
            "subnet_id": "subnet-097d0f933f095fcf8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a804b4aeac353f4",
            "route_table_id": "rtb-0ea6849343ec898d9",
            "subnet_id": "subnet-0a616f40f2aff1939"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e503f20be1be5ae7",
            "route_table_id": "rtb-0ea6849343ec898d9",
            "subnet_id": "subnet-0390bcda39be8220a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:subnet/subnet-07fe180efa71c3307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fe180efa71c3307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997133333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-private-us-west-1c",
              "kuberentes.io/role/internel-elb": "1"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-private-us-west-1c",
              "kuberentes.io/role/internel-elb": "1"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:subnet/subnet-097d0f933f095fcf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d0f933f095fcf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997133333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-private-us-west-1b",
              "kuberentes.io/role/internel-elb": "1"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-private-us-west-1b",
              "kuberentes.io/role/internel-elb": "1"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:subnet/subnet-0a616f40f2aff1939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a616f40f2aff1939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997133333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-public-us-west-1c",
              "kuberentes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-public-us-west-1c",
              "kuberentes.io/role/elb": "1"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:subnet/subnet-0390bcda39be8220a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0390bcda39be8220a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997133333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks-public-us-west-1b",
              "kuberentes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks-public-us-west-1b",
              "kuberentes.io/role/elb": "1"
            },
            "vpc_id": "vpc-022c6bfd93673c6f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:147997133333:vpc/vpc-022c6bfd93673c6f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03355acb7f11908b5",
            "default_route_table_id": "rtb-066ee901153a83c1a",
            "default_security_group_id": "sg-0e60f08286d43704b",
            "dhcp_options_id": "dopt-07a44484abf8451dd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022c6bfd93673c6f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066ee901153a83c1a",
            "owner_id": "147997133333",
            "tags": {
              "Env": "armond-dev",
              "Name": "my-eks"
            },
            "tags_all": {
              "Env": "armond-dev",
              "Name": "my-eks"
            }
          }
        }
      ]
    }
  ]
}